# stm32f44x

./: .cproject  .project  CMakeLists.txt  CMakeLists.txt_bkp
Debug/: makefile  objects.list  output.map  sources.mk  stm32.elf  stm32f4xx_drivers.elf  stm32f4xx_drivers.list  stm32f4xx_drivers.map
Debug/Src/: 001LEDtoggle.d  001LEDtoggle.su  subdir.mk
Debug/Src/Startup/: startup_stm32f446retx.d  subdir.mk
Debug/drivers/src/: stm32f446xx_gpio_driver.d  stm32f446xx_gpio_driver.su  stm32f446xx_i2c_driver.d  stm32f446xx_rcc_driver.d  stm32f446xx_spi_driver.d  stm32f446xx_usart_driver.d  subdir.mk
Debug/src/: 001LEDtoggle.d  006i2c_master_tx_testing.d  subdir.mk
Debug/startup/: subdir.mk  syscalls.d
Middleware/threadx/: .README.md.swp  CMakeLists.txt_bkp  CPackConfig.cmake  CPackSourceConfig.cmake
Src/: 001LEDtoggle.c
b1/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  blinky  blinky.hex  cmake_install.cmake
drivers/inc/: stm32f446xx.h  stm32f446xx_gpio_driver.h  stm32f446xx_i2c_driver.h  stm32f446xx_rcc_driver.h  stm32f446xx_spi_driver.c  stm32f446xx_spi_driver.h  stm32f446xx_usart_driver.h
drivers/src/: stm32f446xx_gpio_driver.c  stm32f446xx_i2c_driver.c  stm32f446xx_rcc_driver.c  stm32f446xx_spi_driver.c  stm32f446xx_usart_driver.c
src/: 001LEDtoggle.c  002LEDtoggle.c  003LEDbutton.c  004LEDbutton_ext.c  004led_button_ext.c  005button_interrupt.c  006i2c_master_tx_testing.c  007i2c_master_rx_testing.c  008spi_tx_testing.c
startup/: startup_stm32.s
